--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
         >
           Register Now
         </a>
-        <a href="#tickets" class="rounded-2xl border border-white/30 px-5 py-3 font-semibold hover:bg-white/10 transition">
+        <!-- <a href="#tickets" class="rounded-2xl border border-white/30 px-5 py-3 font-semibold hover:bg-white/10 transition">
           View Tickets
-        </a>
+        </a> -->
       </div>
     </div>
   </header>
