Update "Register Now" link in index.html to point to tickets section instead of external URL.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <div class="mt-8 flex flex-wrap gap-3">
         <a
-          href="https://www.stephenakintayo.com/sales"
+          href="#tickets"
           class="rounded-2xl bg-white px-5 py-3 font-semibold text-slate-900 shadow hover:shadow-lg transition"
         >
           Register Now
