Update ticket availability message in index.html for clarity on physical ticket slots.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <section id="tickets" class="mx-auto max-w-6xl px-6 pb-8">
     <div class="flex items-end justify-between">
       <h2 class="text-2xl md:text-3xl font-bold">Choose your ticket</h2>
-      <p class="text-slate-300">Both ticket types are <span class="font-semibold">FREE</span>. Limited combined capacity of 100.</p>
+      <p class="text-slate-300">Both ticket types are <span class="font-semibold">FREE</span>. Only 100 slots available for physical tickets.</p>
     </div>
     <div class="mt-8 grid gap-6 md:grid-cols-2">
       <!-- Physical Ticket -->
