--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   
   <!-- Hero -->
   <header class="relative overflow-hidden">
-    <div class="absolute inset-0 opacity-20 bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1560518883-ce09059eeffa?q=80&w=2000&auto=format&fit=crop')"></div>
+    <div class="absolute inset-0 opacity-20 bg-cover bg-center" style="background-image: url('images/rens.jpg')"></div>
     <div class="relative mx-auto max-w-6xl px-6 py-20">
       <h1 class="text-3xl md:text-5xl font-extrabold tracking-tight fade-in-up">
         Real Estate Sales Masterclass
