Update all ticket-related links in index.html to direct to the new Zoom registration page.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <div class="mt-8 flex flex-wrap gap-3">
         <a
-          href="https://app.mailingboss.com/lists/69038619e57ee/subscribe"
+          href="https://us06web.zoom.us/meeting/register/w9IJEjnlSsukOOoxBVap8A"
           class="rounded-2xl bg-white px-5 py-3 font-semibold text-slate-900 shadow hover:shadow-lg transition"
         >
           Register Now
@@ -152,7 +152,7 @@
           <li>Check‑in from 7:30 AM</li>
         </ul>
         <a
-          href="https://app.mailingboss.com/lists/69038619e57ee/subscribe"
+          href="https://us06web.zoom.us/meeting/register/w9IJEjnlSsukOOoxBVap8A"
           class="mt-6 inline-block rounded-2xl bg-white px-5 py-3 font-semibold text-slate-900 shadow hover:shadow-lg transition"
         >
           Save my seat (Physical)
@@ -176,7 +176,7 @@
           <li>Best for participants outside Lagos</li>
         </ul>
         <a
-          href="https://app.mailingboss.com/lists/69038619e57ee/subscribe"
+          href="https://us06web.zoom.us/meeting/register/w9IJEjnlSsukOOoxBVap8A"
           class="mt-6 inline-block rounded-2xl bg-white px-5 py-3 font-semibold text-slate-900 shadow hover:shadow-lg transition"
         >
           Reserve virtual access
@@ -322,7 +322,7 @@
       </div>
       <div class="md:text-right">
         <a
-          href="https://app.mailingboss.com/lists/69038619e57ee/subscribe"
+          href="https://us06web.zoom.us/meeting/register/w9IJEjnlSsukOOoxBVap8A"
           class="inline-flex items-center gap-2 rounded-2xl bg-white px-5 py-3 font-semibold text-slate-900 shadow hover:shadow-lg transition"
         >
           <svg class="h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
